# CompGraphics

./: README.md
CG_1/: CG_1.csproj  CG_1.sln  Program.cs
CG_2/: Program.cs
CG_3/: Program.cs
CG_4/: Program.cs
CG_5/: CMakeLists.txt  lab5.cpp
CG_6/Engine/: Engine.sln
CG_6/Engine/Engine/: Engine.csproj  HUD.cs  ImGuiController.cs  KeyboardManager.cs  Object.cs  ObjectManager.cs  Player.cs  Program.cs  Shadow.cs  Window.cs
CG_6/Engine/Engine/Camera/: BaseCamera.cs  DirectionLightCamera.cs  EngineCamera.cs  GameCamera.cs
CG_6/Engine/Engine/Data/: CommonData.txt
CG_6/Engine/Engine/Fonts/: latinText.fnt  latinText_0_3.tga
CG_6/Engine/Engine/Lights/: DirectionLight.cs  Light.cs  PointLight.cs  SpotLight.cs  ToolBar.cs
CG_6/Engine/Engine/Objects/: CommonData.cs  DisembodiedObject.cs  FlatObjects.cs  Object3D.cs  ObjectsInstance.cs
CG_6/Engine/Engine/Objects/Objects2D/: Font.cs  GUI.cs
CG_6/Engine/Engine/Objects/Objects3D/: Cube.cs  CustomObject.cs  Pyramid.cs
CG_6/Engine/Engine/Properties/: AssemblyInfo.cs
CG_6/Engine/Engine/Shaders/: Shader.cs  common.frag
CG_6/Engine/Engine/Shaders/Cube/: common.vert
CG_6/Engine/Engine/Shaders/Custom/: custom.vert
CG_6/Engine/Engine/Shaders/Font/: index.frag  index.vert
CG_6/Engine/Engine/Shaders/GUI/: index.frag
CG_6/Engine/Engine/SystemInteraction/: NativeFileDialog.cs
CG_6/Engine/Engine/Textures/: Texture.cs
CG_6/Engine/Engine/ToolBar/: AABB.cs  Common.cs  GUI_Helper.cs  Stream.cs  Transform.cs
CG_6/Engine/Engine/UserClass/: UPlayer.cs
CG_6/Engine/UserRealization/: UPlayer.cs
(+3 files in other folders)
